src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ASNs__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>ASNs</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accepts_Partials__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Accepts Partials</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <label>Account Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <label>Account Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager__c</fullName>
        <description>Change 521836 GI Service Cloud - Pulled from the Account Owner&apos;s User.Manager fields</description>
        <formula>Owner.Manager.LastName &amp;&quot;, &quot;&amp;Owner.Manager.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Strategy__c</fullName>
        <description>Added by Exec Steering Comm request</description>
        <inlineHelpText>Enter the near and long term strategies for growth and/or maintenance for this Account.</inlineHelpText>
        <label>Account Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Enter in the Account Type</description>
        <label>Account Type</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User/Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor/Jobber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer – Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer – Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer - Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowes Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Last_Week_Sales__c</fullName>
        <label>Actual Last Week Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_QTD_Sales__c</fullName>
        <label>Actual QTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_WTD_Participation__c</fullName>
        <label>Actual WTD Participation %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Participation__c</fullName>
        <label>Actual YTD Participation %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Sales__c</fullName>
        <label>Actual YTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aged_Inventory_Billing_Agreement__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Aged Inventory Billing Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Technique__c</fullName>
        <label>Application Technique</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>Date that Pipe approval was granted or denied.</description>
        <label>Approval/Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <description>Used for Pipe business to determine if Valspar has been approved by a pipeline owner</description>
        <label>Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>At_Risk_Reason__c</fullName>
        <label>At Risk Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Fit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business At Risk</description>
        <inlineHelpText>Check this box if this Account/Business is At Risk</inlineHelpText>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_Q_Area__c</fullName>
        <description>B&amp;Q Area for assigning Reps within a Region</description>
        <label>B&amp;Q Area</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Q_Call_Days_Week__c</fullName>
        <description>B&amp;Q Call Days per week for each Store</description>
        <label>B&amp;Q Call Days/Week</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Customer_Grading__c</fullName>
        <description>Used for Wattyl Trade, field value generated by SetCustomerGradingOnAccount trigger.</description>
        <label>Best Customer Grading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Customer_Ranking__c</fullName>
        <description>Used for Wattyl Trade, field value generated by SetCustomerGradingOnAccount trigger.</description>
        <label>Best Customer Ranking</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Customer_Suggested_Call_Cycle__c</fullName>
        <description>Used for Wattyl Trade, field value generated by SetCustomerGradingOnAccount trigger.</description>
        <label>Best Customer Suggested Call Cycle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <label>Bill To #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <label>Billing County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Brand Owner)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Aerosol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil/Extrusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Laser Sintering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Plastikote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer B&amp;Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Wattyl Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Lowes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Ace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Masters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_at_Risk__c</fullName>
        <label>% of Business at Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSR_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Change 521836 GI Service Cloud - Backup Customer Service Rep on Account (manually entered)</description>
        <label>CSR Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Change 521836 GI Service Cloud - Synced from 11i: Agent from the Customer Territory field on the Ship To in the 11i Customer Master</description>
        <label>CSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chance_of_Losing_Business__c</fullName>
        <label>% Chance of Losing Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_District_Manager__c</fullName>
        <description>For Consumer Ace as set by Ace Corporate</description>
        <label>Channel Partner District Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Division__c</fullName>
        <description>For Consumer Ace as set by Ace Corporate</description>
        <label>Channel Partner Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Region__c</fullName>
        <description>For Consumer Ace as set by Ace Corporate</description>
        <label>Channel Partner Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Territory__c</fullName>
        <description>For Consumer Ace as set by Ace Corporate</description>
        <label>Channel Partner Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Warehouse__c</fullName>
        <description>For Consumer Ace as set by Ace Corporate</description>
        <label>Channel Partner Warehouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Color_Matching_Equiptment__c</fullName>
        <label>Color Matching Equiptment</label>
        <picklist>
            <picklistValues>
                <fullName>Datacolor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MatchRite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Information__c</fullName>
        <description>EPS Global Account</description>
        <inlineHelpText>List any past, present or future competitors selling to this Account including region</inlineHelpText>
        <label>Competitor Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <inlineHelpText>List any past, present or future competitors selling to this Account</inlineHelpText>
        <label>Competitors</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment_Billing_Cycle__c</fullName>
        <description>Change 521836 GI Service Cloud - Customer Consignment Billing Cycle</description>
        <label>Consignment Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly - Fiscal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly - Calendar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consignment_WH_s__c</fullName>
        <description>Change 521836 GI Service Cloud: Warehouse Numbers for Consignment Customers (11i value but not synced)</description>
        <label>Consignment WH#&apos;s</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment__c</fullName>
        <description>Change 521836 GI Service Cloud - Consignment Customer Designator</description>
        <label>Consignment</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__DUNS__c</fullName>
        <label>DUNS</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_FY_Avg_Monthly_Purchases__c</fullName>
        <description>For Wattyl Trade to calculate average monthly sales based on the account created date.</description>
        <formula>if(FLOOR( (today() -DATEVALUE(CreatedDate)) / 30.4375)&gt;0 &amp;&amp;    CreatedBy.Alias  =&apos;API USER&apos;,
IF   
(
MONTH(DATEVALUE(CreatedDate))&lt;=10 
&amp;&amp; 
YEAR(DATEVALUE(CreatedDate))=YEAR(TODAY() )  ||   
MONTH(DATEVALUE(CreatedDate))&gt;=10 
&amp;&amp; YEAR(DATEVALUE(CreatedDate))=YEAR(TODAY()-1),  
Rolling_12_Month_Sales__c /FLOOR( (today() -DATEVALUE(CreatedDate)) / 30.4375)
,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Avg Monthly Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_YTD_Sales__c</fullName>
        <description>Analytics calculated and synched year to date sales</description>
        <label>Current Fiscal YTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Bar_Code_Labels__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Custom Bar Code Labels</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decorative_Paint_Growth__c</fullName>
        <description>B&amp;Q Objective: Decorative Paint Growth (%)</description>
        <inlineHelpText>Objective: Decorative Paint Growth (%)</inlineHelpText>
        <label>Decorative Paint Growth %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Delivery_Appointment_Needed__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Delivery Appointment Needed</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distributor that account will most likely purchase from.</description>
        <inlineHelpText>Distributor that account will most likely purchase from.</inlineHelpText>
        <label>Distributor</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Distributor)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight_Terms__c</fullName>
        <description>Change 521836 GI Service Cloud -  Synced from 11i/Legacy for Intergegrated Accounts</description>
        <label>Freight Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Region__c</fullName>
        <description>Region from the &quot;Sales Territory&quot; DFF on the 11i Ship To Customer record</description>
        <label>Geo Region</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSIDE SALES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNATIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEXICO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MID-ATLANTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTIPLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH MIDWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROCKY MOUNTAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH AMERICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTHEAST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Market__c</fullName>
        <description>Global region for the Pipe Coatings market</description>
        <label>Global Market</label>
        <picklist>
            <picklistValues>
                <fullName>US/Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade_Rank_Messages__c</fullName>
        <description>Used for Wattyl Trade, field value generated by SetCustomerGradingOnAccount trigger.</description>
        <label>Grade/Rank Messages</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Growth_Opportunity_Grading__c</fullName>
        <description>Used for Wattyl Trade, field value generated by SetCustomerGradingOnAccount trigger.</description>
        <label>Growth Opportunity Grading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth_Opportunity_Ranking__c</fullName>
        <description>Used for Wattyl Trade, field value generated by SetCustomerGradingOnAccount trigger.</description>
        <label>Growth Opportunity Ranking</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Opportunity_Suggested_Call_Cycle__c</fullName>
        <description>Used for Wattyl Trade, field value generated by SetCustomerGradingOnAccount trigger.</description>
        <label>Growth Opportunity Suggested Call Cycle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactivated_By__c</fullName>
        <description>Identifies the user who changed the Salesforce Account Active flag to False.  CHG-523644</description>
        <inlineHelpText>Date the Account became inactive in Salesforce.</inlineHelpText>
        <label>Inactivated By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <description>Identifies the date that the Salesforce Account Active flag was turned to False.  CHG-523644</description>
        <inlineHelpText>Date the Account became inactive in Salesforce.</inlineHelpText>
        <label>Inactive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integration_Dataload_Id__c</fullName>
        <description>Identifies the last dataload or integration script that updated the account.  This value is retained until the next mass update event.</description>
        <label>Integration Dataload Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicing_Process__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Invoicing Process</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDI</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_ID_Number__c</fullName>
        <description>To be used for conversion or integration processes (such as Lotus Notes ID and Dealer Account ID)</description>
        <externalId>true</externalId>
        <label>Legacy Account ID Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Date__c</fullName>
        <label>Lost Date</label>
        <type>Date</type>
    </fields>
</CustomObject>